<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_bg_light"
        android:orientation="vertical"
        android:padding="30dp">

        <br.com.stant.libraries.uilibrary.components.selectdatepickerview.SelectDatePickerView
            android:id="@+id/select_date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</layout>