<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="br.com.stant.libraries.uilibrary.components.selecttimepickerview.SelectTimePickerView" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rework_time_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/select_time_picker_view.rework_time"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gray"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/select_time_picker_view_time_number_picker_dialog_rework_hours_number_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="20dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text=":"
                    android:textSize="30sp" />
            </RelativeLayout>

            <NumberPicker
                android:id="@+id/select_time_picker_view_time_number_picker_dialog_rework_minutes_number_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <TextView
                android:id="@+id/select_time_picker_view_time_number_picker_dialog_ok_button_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{handler::onPressOkButtonOnNumberPickerDialog}"
                android:padding="15dp"
                android:text="@string/viewing_users_dialog.ok_hint"
                android:textAllCaps="true"
                android:textColor="@color/blue_base"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

</layout>