<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="timeText"
            type="String" />

    </data>


    <LinearLayout
        android:id="@+id/select_time_picker_view_general_container_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/select_time_picker_view_time_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{timeText}"
            tools:text="00:00" />

    </LinearLayout>

</layout>